# ST215C2Firmware

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig
components/bsp/: CMakeLists.txt  bsp.c  bsp.h  bsp_errors.h  common.h  debug_io.c  debug_io.h  eeprom.c  eeprom.h  i2c_driver.c  i2c_driver.h  rtc.c  rtc.h  storage.c  storage.h  timers.c  timers.h
components/controller/: CMakeLists.txt  controller.c  controller.h
components/host_comms/: CMakeLists.txt  context_dictionary.c  context_dictionary.h  http_client.c  http_client.h  http_server.c  http_utils.c  message_handler.h  nxjson.h  template_renderer.c  wifi_interface.c
components/host_comms/web_pages/: base.css  connect.html  connect_request_ssid.html  connect_result.html  diagnostics.html  home.html  scan.html
components/server_comms/: CMakeLists.txt  message_handler.c  wifi_interface.c  wifi_interface.h
components/utilities/: CMakeLists.txt  nxjson.c
components/web_server/: CMakeLists.txt  http_server.c  http_server.h  http_utils.h  template_renderer.h
main/: CMakeLists.txt  main.c  scheduler.c  scheduler.h
